testdata/golden/parser/valid/range_literals.fmt
fn test() {
    let a = [1, 2, 3];
    let b = [1];
    let r1 = [1..3];
    let r2 = [1..=3];
    let r3 = [1..];
    let r4 = [..3];
    let r5 = [..=3];
    let r6 = [..];
    let arr = [1..3,];
}
