testdata/golden/parser/invalid/null_coalescing_not_supported.fmt
fn test() {
    let value = nothing ?? nothing;
}
